<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Kheti</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_language_hindi">हिंदी</string>
    <string name="action_language_english">English</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_setting_detail">SettingsActivity</string>
    <string name="pref_location_key">location</string>
    <string name="pref_default_value">247667</string>

    <string name="str_rb_normal">Normal</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="str_rb_terrain">Terrain</string>
    <string name="str_rb_hybrid">Hybrid</string>

    <string name="pref_temp_key">temperature</string>
    <string name="pref_temp_default">Metric</string>

    <string-array name="listArray">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="action_share">Share</string>

    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_maps">Map</string>


    <string name="weather">Weather</string>
    <string name="expert">Ask Expert</string>
    <string name="profile">Profile</string>
    <string name="measure">Add Measure</string>
    <string name="info">Crop Info</string>


</resources>
