<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rdeveloper.paviliong6.kheti.MainActivity"
    android:background="#d4d3d3"
    android:baselineAligned="false">


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginTop="45dp">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_weather"
            android:src="@drawable/weather"
            android:onClick="onClickWeather"
            android:layout_weight="1" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_expert"
            android:src="@drawable/expert"
            android:onClick="onClickExpert"
            android:layout_weight="1" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="12dp"
            android:textColor="#dc1111"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expert"
            android:id="@+id/textView2"
            android:textColor="#dc1111"
            android:textStyle="bold"
            android:textSize="12dp"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

    </TableRow>



    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@drawable/sign_up"
            android:onClick="onClickProfile"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton4"
            android:src="@drawable/map_farm"
            android:onClick="onAddMeasure"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#dc1111"
            android:textSize="12dp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#dc1111"
            android:textSize="12dp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton5"
            android:src="@drawable/crop_info"
            android:onClick="onCropInfo"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#dc1111"
            android:textSize="12dp"
            android:textStyle="bold" />

    </TableRow>


</TableLayout>
</LinearLayout>