<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4d3d3">

    <RadioGroup
        android:id="@+id/rg_views"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@drawable/border">

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_normal"
            android:checked="true"
            android:layout_weight="0.22" />

        <RadioButton
            android:id="@+id/rb_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_satellite"
            android:layout_weight="0.22" />

        <RadioButton
            android:id="@+id/rb_terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_terrain"
            android:layout_weight="0.22" />

        <RadioButton
            android:id="@+id/rb_hybrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_hybrid"
            android:layout_weight="0.22" />


    </RadioGroup>


<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rdeveloper.paviliong6.kheti.MapsActivity"
    android:layout_below="@+id/rg_views"
    android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:id="@+id/map_width"
        android:layout_below="@+id/rg_views"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:hint="Width (Km)"
        android:paddingLeft="3dp"
        android:textColor="#dc1111"
        android:textStyle="bold"
        android:textSize="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Start"
        android:id="@+id/map_start"
        android:background="#54d465"
        android:layout_alignTop="@+id/map_width"
        android:layout_toRightOf="@+id/map_width"
        android:layout_toEndOf="@+id/map_width"
        android:layout_marginLeft="5dp"
        android:textColor="#dc1111"
        android:onClick="onClickStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="Stop"
        android:id="@+id/map_stop"
        android:layout_below="@+id/rg_views"
        android:layout_toRightOf="@+id/map_start"
        android:layout_toEndOf="@+id/map_start"
        android:background="#54d465"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="#dc1111"
        android:onClick="onClickStop" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="Area (Sq. Km)"
        android:id="@+id/map_out"
        android:textColor="#dc1111"
        android:background="@drawable/border"
        android:layout_alignTop="@+id/map_stop"
        android:layout_toRightOf="@+id/map_stop"
        android:layout_toEndOf="@+id/map_stop"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginRight="5dp" />

</RelativeLayout>